css/style.css
/* ... */
    
    .nav_active {
        color: #0C5DE9;
    }
    
    nav li {
        padding-bottom: 10px;
        margin-left: 30px;
    }
    
    nav li a:hover {
        color: #F9BB08
    }
    
    #projects {
        grid-row: 3 / span 1;
    }
    
    #PG_text {
        grid-row: 4 / span 1;
    }
    
    #PG_img {
        grid-row: 5 / span 1;
    }
    
    #engin_text {
        grid-row: 40 / span 1;
    }
    
    #engin_img {
        grid-row: 50 / span 1;
    }
    
    #web_text {
        grid-row: 60 / span 1;
    }
    
    #web_img {
        grid-row: 70 / span 1;
    }
    
    #ux_text {
        grid-row: 80 / span 1;
    }
    
    #ux_img {
        grid-row: 90 / span 1;
    }
    
    #research_text {
        grid-row: 100 / span 1;
    }
    
    #research_img {
        grid-row: 110 / span 1;
    }
    
    #about {
        grid-row: 12 / span 1;
    }
    
    #about_text {
        grid-row: 13 / span 1;
        grid-column: 2/ span 1;
        padding-top: 65px;
        font-size: 20px;
    }
    
    #about_img {
        grid-row: 14 / span 1;
        grid-column: 2/ span 1;
        padding-top: 100px;
        padding-bottom: 0px;
        margin: 0 auto;
    }
    
    #about_img img {
        width: 286px;
        /* 3dp */
        box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.20);
        padding-top: 0px;
    }
    
    #debug_text {
        grid-row: 15 / span 1;
    }
    
    #debug_img {
        grid-row: 16 / span 1;
    }
    
    #learn_text {
        grid-row: 17 / span 1;
    }
    
    #learn_img {
        grid-row: 18 / span 1;
    }
    
    #people_text {
        grid-row: 19 / span 1;
    }
    
    #people_img {
        grid-row: 20 / span 1;
    }
    
    #designs {
        grid-row: 21 / span 1;
    }
    
    #design_text {
        grid-row: 22 / span 1;
    }
    
    #UX_designs {
        grid-row: 23 / span 1;
        color: black;
        text-align: center;
        grid-column: 2/ span 1;
        margin-top: 100px;
    }
    
    #myUXgal {
        grid-row: 24 / span 1;
    }
    
    #Creative_designs {
        grid-row: 25 / span 1;
        color: black;
        text-align: center;
        grid-column: 2/ span 1;
        margin-top: 200px;
    }
    
    #myCreativegal {
        grid-row: 26 / span 1;
    }
    
    #Geo_designs {
        grid-row: 27 / span 1;
        color: black;
        text-align: center;
        grid-column: 2/ span 1;
        margin-top: 200px;
    }
    
    #myGeogal {
        grid-row: 28 / span 1;
    }
    
    #Wal_designs {
        grid-row: 29 / span 1;
        color: black;
        text-align: center;
        grid-column: 2/ span 1;
        margin-top: 200px;
    }
    
    #myWalgal {
        grid-row: 30 / span 1;
    }
    
    #contact {
        text-align: center;
        padding-top: 25px;
        grid-column: 1 / span 3;
        padding: 20px 25px;
        border-bottom: #4285F5 solid;
        grid-row: 29 / span 1;
    }
    
    #contact_photo {
        grid-row: 30 / span 1;
    }
    
    .contact_form {
        grid-row: 31 / span 1;
    }
    
    #social_media {
        grid-row: 32 / span 1;
    }
    
    #PG_img,
    #engin_img,
    #web_img,
    #ux_img,
    #research_img,
    #debug_img,
    #learn_img,
    #people_img {
        grid-column: 2 / span 1;
        row-gap: 0px;
        margin-left: auto;
        margin-right: auto;
        padding-top: 23px;
        padding-bottom: 150px;
    }
    
    #projects,
    #designs,
    #about {
        grid-column: 1 / span 3;
        padding: 20px 25px;
        border-bottom: #4285F5 solid;
        padding-top: 200px;
    }
    
    #projects,
    #designs,
    #about {
        padding-top: 25px;
    }
    
    #web_text {
        padding-top: 20px;
    }
    
    #PG_h2 {
        text-align: center;
    }
    
    #intro,
    #projects,
    #about,
    #designs,
    #engin_text,
    #web_text,
    #ux_text,
    #research_text,
    #debug_text,
    #learn_text,
    #people_text,
    #design_text {
        text-align: center;
    }
    
    #engin_text p,
    #web_text p,
    #ux_text p,
    #research_text p,
    #debug_text p,
    #learn_text p,
    #people_text p,
    #design_text p {
        text-align: left;
        font-size: 20px;
    }
    
    #spotistats {
        text-align: center !important;
    }
    
    #intro {
        padding-top: 100px;
        padding-bottom: 100px;
        grid-row: 1 / span 1;
    }
    
    ul {
        padding-bottom: 23px;
        font-size: 20px;
    }
    
    .skills {
        padding-top: 50px;
    }
    
    .gallery {
        min-height: 600px;
        display: -webkit-box;
        display: flex;
        -webkit-box-pack: center;
        justify-content: center;
        -webkit-box-align: center;
        align-items: center;
        -webkit-box-orient: horizontal;
        -webkit-box-direction: normal;
        flex-direction: row;
        flex-wrap: wrap;
    }
    
    .design_image {
        width: 100%;
    }
    
    .design_img {
        width: 80%;
        margin-top: 82px;
    }
    
    #image3,
    #image4,
    #image6 {
        background-color: rgba(153, 153, 153, 0.568);
    }
    
    .zoomGalOut {
        width: 600px;
        height: 338px;
        overflow: hidden;
        position: relative;
    }
    
    .zoomGalIn {
        width: 100%;
        height: 100%;
        background-image: url("music.jpg");
        background-position: center;
        background-size: cover;
        -webkit-transition-duration: 1s;
        transition-duration: 1s;
        -webkit-transition-timing-function: ease;
        transition-timing-function: ease;
    }
    
    .zoomGalIn:hover {
        -webkit-transform: scale(1.2);
        transform: scale(1.2);
    }
    
    #myUXgal,
    #myCreativegal,
    #myGeogal,
    #myWalgal {
        grid-column: 1/ span 4;
    }
    
    #mygal {
        padding-top: 50px;
    }
/* ... */

